Fix modal z-index and toc links

--- a/source/assets/css/components/content.scss
+++ b/source/assets/css/components/content.scss
@@ -17,8 +17,6 @@
 }
 
 .content--paper {
-  z-index: 1;
-
   @extend %e-bgc-white-1;
   @extend %e-box-shad-z2;
   // @extend %e-rad-slight;
